# vf2_bootloader

./: .gitignore  Cargo.toml  README.md  gen_img.sh  link.ld  loader.efi
src/: console.rs  entry.S  fat.rs  lib.rs  logger.rs  main.rs  mem.rs  sd.rs  uart.rs
tools/: LEGO.OS  fit_img.its
