[package]
name = "vf2_bootloader"
version = "0.1.1"
edition = "2024"

[dependencies]
lego_device = { git = "https://github.com/lego-os/lego_device.git", features = [
    "char",
    "block",
], branch = "main" }
riscv_utils = { git = "https://github.com/lego-os/riscv_utils.git", branch = "main" }
gpt = { git = "https://github.com/QIUZHILEI/gpt.git", branch = "main" }
uart_8250 = { git = "https://github.com/QIUZHILEI/uart_8250.git", branch = "main" }
dw_sd = { git = "https://github.com/QIUZHILEI/dw_sd.git", branch = "main" }
log = "0"
byteorder = { version = "1", default-features = false }

[profile.release]
opt-level = 3
